--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
 	},
     "require-dev": {
         "way/generators": "2.*",
-        "fzaninotto/faker": "v1.3.0"
+        "fzaninotto/faker": "v1.3.0",
+        "barryvdh/laravel-debugbar": "dev-master"
     },
 	"autoload": {
         "psr-4": {
